src/grammar/document/snapshots/yaml_parser__grammar__document__tests__yaml_directive.snap
---
source: src/grammar/document/tests.rs
expression: "parse(directives, \"%YAML\")"
---
- token: directive
  stream: "%"
  span:
    start:
      index: 0
      line: 0
      column: 0
    end:
      index: 1
      line: 0
      column: 1
- token: directive_name
  stream: YAML
  span:
    start:
      index: 1
      line: 0
      column: 1
    end:
      index: 5
      line: 0
      column: 5
- severity: error
  message: "expected a YAML version number, but reached end of input"
  span:
    start:
      index: 5
      line: 0
      column: 5
    end:
      index: 5
      line: 0
      column: 5
  stream: ""
- value:
    explicit: false
    version: ~
    tags: {}

